<resources>
    <string name="app_name">Сalculator</string>
    <string name="textView2">0</string>
    <string name="button">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonMinus">-</string>
    <string name="buttonDivide">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonPlus">+</string>
    <string name="buttonC">C</string>
    <string name="buttonEqual">=</string>

</resources>
